--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,15 @@
-<<<<<<< HEAD
-*.class
-
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
+=======
+# OS generated files
+.DS_Store
+Thumbs.db
+*~
+# Thumbnails
+._*
+
+### Java ###
+*.class
 
 # Package Files #
 *.jar
@@ -11,7 +18,40 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-*.html
-*~
-/build/*
-/target/*
+
+# Gradle Files
+.gradle
+.m2
+
+# Build output directies
+build/
+/target
+
+### Eclipse project file ###
+.metadata
+.classpath
+.project
+.settings/
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+.loadpath
+.launch
+.cproject
+
+
+# IntelliJ project files
+*.iml
+*.iws
+*.ipr
+.idea
+out
+test-output
+
+.idea_modules/
+
+# JIRA plugin
+atlassian-ide-plugin.xml
