Create a source JAR using maven-source-plugin

--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,18 @@
 							<target>${java.version}</target>
 						</configuration>
 					</plugin>
+					<plugin>
+						<artifactId>maven-source-plugin</artifactId>
+						<version>3.0.1</version>
+						<executions>
+							<execution>
+								<id>attach-sources</id>
+								<goals>
+									<goal>jar</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
 				</plugins>
 			</build>
 			<repositories>
